# mlops-core

./: .env.docker.compose.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_app.sh
.dvc/: config
.github/workflows/: ci.yml  (+2 more)
admin-ui/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js  vite.config.ts
app/: api_catalog.py  app.py  metrics.py  openapi.py
auth-service/: Dockerfile
chat-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
cookiecutter/: README.md  cookiecutter.json
cookiecutter/{{cookiecutter.project_slug}}/: .env.docker.compose.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
cookiecutter/{{cookiecutter.project_slug}}/.dvc/: config  config.local.example
cookiecutter/{{cookiecutter.project_slug}}/admin-ui/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
cookiecutter/{{cookiecutter.project_slug}}/admin-ui/src/: App.tsx  index.css
cookiecutter/{{cookiecutter.project_slug}}/admin-ui/src/auth/: AuthContext.tsx
cookiecutter/{{cookiecutter.project_slug}}/admin-ui/src/pages/: DatasetsPage.tsx  DriftAlertsPage.tsx  ExperimentsPage.tsx  LoginPage.tsx
cookiecutter/{{cookiecutter.project_slug}}/app/: app.py  metrics.py
cookiecutter/{{cookiecutter.project_slug}}/app/conf/: webserver.py
cookiecutter/{{cookiecutter.project_slug}}/app/core/: auth_client.py  data.py  drift.py  embeddings.py  interaction_log.py  session_cache.py  transformer.py  ttt.py
cookiecutter/{{cookiecutter.project_slug}}/app/training/: __init__.py  admin_routes.py  checkpoints.py  config.py  dataset.py  dvc_status.py
cookiecutter/{{cookiecutter.project_slug}}/auth-service/: Dockerfile  pyproject.toml
cookiecutter/{{cookiecutter.project_slug}}/auth-service/auth_service/: config.py  main.py
cookiecutter/{{cookiecutter.project_slug}}/chat-ui/: nginx.conf  package.json
cookiecutter/{{cookiecutter.project_slug}}/chat-ui/src/: App.tsx  index.css
cookiecutter/{{cookiecutter.project_slug}}/chat-ui/src/api/: client.ts
cookiecutter/{{cookiecutter.project_slug}}/chat-ui/src/auth/: AuthContext.tsx
cookiecutter/{{cookiecutter.project_slug}}/chat-ui/src/pages/: LoginPage.tsx
cookiecutter/{{cookiecutter.project_slug}}/deploy/compose/: README.md  docker-compose.yml
cookiecutter/{{cookiecutter.project_slug}}/deploy/k3s/: README.md  daemon.json.snippet  registries.yaml
cookiecutter/{{cookiecutter.project_slug}}/docker/mlflow/: Dockerfile
cookiecutter/{{cookiecutter.project_slug}}/docs/: deploy-k3s.md
cookiecutter/{{cookiecutter.project_slug}}/grafana-provisioning/dashboards/: dashboard.yml  drift.json
cookiecutter/{{cookiecutter.project_slug}}/grafana-provisioning/datasources/: prometheus.yml
cookiecutter/{{cookiecutter.project_slug}}/k8s/: README.md  secrets.example.yaml
cookiecutter/{{cookiecutter.project_slug}}/k8s/base/: admin-ui.yaml  app.yaml  auth-service.yaml  chat-ui.yaml  configmap.yaml  grafana.yaml  kustomization.yaml  minio-init-job.yaml  minio.yaml  mlflow.yaml  namespace.yaml  prometheus.yaml  redis.yaml
cookiecutter/{{cookiecutter.project_slug}}/k8s/base/grafana/dashboards/: app.json
cookiecutter/{{cookiecutter.project_slug}}/k8s/overlays/no-gpu/: kustomization.yaml  patch-app-no-gpu.yaml  patch-config-cpu.yaml
cookiecutter/{{cookiecutter.project_slug}}/models/: directory_model_file.md
cookiecutter/{{cookiecutter.project_slug}}/scripts/: dvc-setup.sh  k3s-build-images.sh  k3s-copy-model.sh  k3s-deploy.sh  k3s-import-images.sh  k3s-setup-registry.sh
cookiecutter/{{cookiecutter.project_slug}}/tests/: test_auth_client.py  test_auth_service.py  test_dvc.py  test_dvc_status.py  test_health.py  test_training_checkpoints.py
docs/: deploy-argocd.md  deploy-k3s.md
k8s/: kustomization.yaml  secrets.example.yaml
models/: active_model.json  directory_model_file.md  model.pt.dvc
prometheus/: prometheus-rules.yml  prometheus.yml
scripts/: dvc-setup.sh  k3s-build-images.sh  k3s-copy-model.sh  k3s-deploy.sh  k3s-setup-registry.sh  sync_cookiecutter_template.py
tests/: test_auth_service.py  test_dvc.py  test_dvc_metrics.py  test_dvc_status.py  test_inference_model.py  test_model_status_metrics.py  test_training_checkpoints.py
(+115 files in other folders)
