[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "prometheus-client>=0.25.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "cookiecutter>=2.6.0",
    "dvc[s3]>=3.59.0",
    "httpx>=0.28.0",
    "pylint>=4.0.5",
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "auth-service"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | \.mypy_cache
  | build
  | dist
)/
'''

[tool.pylint.main]
py-version = "3.12"
jobs = 0
recursive = true

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
    "wrong-import-position",
    "line-too-long",
    "too-few-public-methods",
]
