[project]
name = "mlops-auth-service"
version = "0.1.0"
description = "Authentication service with users and API keys CRUD"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
]

[project.scripts]
mlops-auth-service = "auth_service.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auth_service"]
